# mini-claude-code

./: .gitignore  CLAUDE.md  README.md  agent.py  commands.py  config.py  hatch_build.py  printer.py  prompts.py  pyproject.toml  skills.py  tasks.py  test_tasks.py  todos.py  tools.py  usage.py
docs/: L2-spec.md
docs/superpowers/plans/: 2026-05-27-dual-channel-memory-injection.md  2026-05-31-memory-prefetch.md  2026-05-31-memory-selector.md  2026-06-02-memory-op-display.md
docs/superpowers/specs/: 2026-05-31-memory-prefetch-design.md  2026-05-31-memory-selector-design.md  2026-06-02-memory-op-display-design.md
prompts/: compact.md
scripts/: README.md  repro_engine.py  repro_multiturn.py  repro_recovery.py  repro_tool_choice.py
src/mini_cc/: __main__.py  commands.py  config.py  llm.py  memory_prompt.py  prompts.py  side_query.py
src/mini_cc/consumers/: base.py  persistence.py
src/mini_cc/engine/: _diagnostics.py  agent_loop.py  compact.py  messages.py  predicates.py  query_engine.py  sandbox.py  store.py  subscription.py  transforms.py
src/mini_cc/memdir/: __init__.py  age.py  injection.py  paths.py  prefetch.py  scan.py  selector.py  truncate.py  types.py
tests/: conftest.py  test_boot_memory_injection.py  test_compact.py  test_compact_overflow.py  test_config.py  test_diagnostics.py  test_file_read_memory.py  test_file_tools.py  test_grep_glob_tools.py  test_memdir_prefetch.py  test_memdir_retrievable.py  test_memdir_selector.py  test_memdir_storable.py  test_memory_age.py  test_memory_op_display.py  test_memory_prompt.py  test_message_store.py  test_messages.py  test_persistence.py  test_predicates.py  test_prefetch_wiring.py  test_prompt_rendering.py  test_prompts_protocol.py  test_query_engine.py  test_relevant_memory_message.py  test_sandbox.py  test_side_query.py  test_store_merge.py  test_subscription.py  test_tasks.py  test_tool_truncation.py  test_tools.py  test_transforms.py  test_tui_recalled.py  test_tui_renderers.py
(+57 files in other folders)
