[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-cc"
version = "0.1.0"
description = "A minimal coding agent built as a manual agentic loop."
requires-python = ">=3.11"
dependencies = [
    "langchain-openai",
    "python-dotenv",
    "pyyaml",
    "rich",
    "pydantic>=2",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
mini-cc = "mini_cc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_cc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = []

[tool.ruff]
line-length = 100
target-version = "py311"
