[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-cc"
version = "0.1.0"
description = "A minimal coding agent built as a manual agentic loop."
requires-python = ">=3.11"
dependencies = [
    "langchain-openai",
    "langchain-deepseek",
    "python-dotenv",
    "pyyaml",
    "rich",
    "pydantic>=2",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
mini-cc = "mini_cc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_cc"]
# Include vendored ripgrep binary fetched by hatch_build.py at install time.
# Both `rg` (Unix) and `rg.exe` (Windows) listed; only one exists per platform.
artifacts = [
    "src/mini_cc/_vendor/rg",
    "src/mini_cc/_vendor/rg.exe",
    "src/mini_cc/_vendor/.rg_version",
]

[tool.hatch.build.hooks.custom]
# Build hook downloads platform-specific rg release into _vendor/ before
# the wheel is sealed. Mirrors CC's npm postinstall pattern.
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = []

[tool.ruff]
line-length = 100
target-version = "py311"
